changed pic format

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="maincon">
     <div class="container">
-        <h1 style="color:white">Welcome To The Expo</h1>
+        <h1 style="color:white">Welcome To Our Expo</h1>
     </div>
     <div class="container">
         <form action="login.html">
