--- a/frontend/login.html
+++ b/frontend/login.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <h1 style="font-size: xx-large;font-weight: bold;">Registration</h1>
-        <form action="/">
+        <form action="home.html">
             <table>
                 <tr>
                     <td class="label"><label for="Name">Name</label></td>
