--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
+    <div class="maincon">
     <div class="container">
         <h1 style="color:white">Welcome To Our Expo</h1>
     </div>
