--- a/frontend/home.html
+++ b/frontend/home.html
@@ -6,7 +6,10 @@
     <title>Expo-Home</title>
     <link rel="stylesheet" href="home.css">
 </head>
-<body>
+<body class="hbody">
+    <button class="hprofile-icon">
+        <img src="propic.png" alt="Profile Image">
+    </button>
     <center><nav>
         <a href="#animals">Animals</a>
         <a href="#birds">Birds</a>
