--- a/frontend/login.html
+++ b/frontend/login.html
@@ -9,25 +9,25 @@
     <script type="text/javascript"></script>
 </head>
 
-<body>
-    <div class="container">
-        <h1 style="font-size: xx-large;font-weight: bold;">Registration</h1>
+<body class="lbody">
+    <div class="lcontainer">
+        <h1>Registration</h1>
         <form action="home.html">
             <table>
                 <tr>
-                    <td class="label"><label for="Name">Name</label></td>
-                    <td><input type="text" id="name" class="input" required placeholder="Give Your Name"></td>
+                    <td class="llabel"><label for="Name">Name</label></td>
+                    <td><input type="text" id="name" class="linput" required placeholder="Give Your Name"></td>
                 </tr>
                 <tr>
-                    <td class="label"><label for="Email">Email</label></td>
-                    <td><input type="email" id="email" class="input" required placeholder="Give Your Email"></td>
+                    <td class="llabel"><label for="Email">Email</label></td>
+                    <td><input type="email" id="email" class="linput" required placeholder="Give Your Email"></td>
                 </tr>
                 <tr>
-                    <td class="label"><label for="Age">Age</label></td>
-                    <td><input type="number" id="age" class="input" placeholder="Give Your Age"></td>
+                    <td class="llabel"><label for="Age">Age</label></td>
+                    <td><input type="number" id="age" class="linput" placeholder="Give Your Age"></td>
                 </tr>
                 <tr>
-                    <td><input type="submit" class="submit submit-1" value="Register"></td>
+                    <td><input type="submit" class="lsubmit lsubmit-1" value="Register"></td>
                 </tr>
             </table>
         </form>
