--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Expo</title>
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <div class="maincon">
     <div class="container">
-        <h1 style="color:white">Welcome To Our Expo</h1>
+        <h1 id="ih1">Welcome To Our Expo</h1>
     </div>
     <div class="container">
         <form action="login.html">
