changed arrow position and color

--- a/frontend/home.html
+++ b/frontend/home.html
@@ -15,8 +15,8 @@
         <a href="#birds">Birds</a>
         <a href="#fish">Fish</a>
     </nav></center>
-    <p class="larrow-container"><span class="left-arrow arrow-move"></span></p>
-    <p class="rarrow-container"><span class="right-arrow arrow-move"></span></p>
+    <p class="larrow-container"><span class="left-arrow larrow-move"></span></p>
+    <p class="rarrow-container"><span class="right-arrow rarrow-move"></span></p>
     
 </body>
 </html>
