--- a/frontend/home.html
+++ b/frontend/home.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="home.css">
 </head>
 <body class="hbody">
-    <button class="hprofile-icon">
+    <button class="hprofile-icon" type="submit">
         <img src="propic.png" alt="Profile Image">
     </button>
     <center><nav>
